--- a/project.config.json
+++ b/project.config.json
@@ -40,7 +40,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": -1,
 			"list": [
 				{
 					"id": -1,
@@ -53,6 +53,7 @@
 					"id": -1,
 					"name": "pages/search_list/index",
 					"pathName": "pages/search_list/index",
+					"query": "keyword=曲面电视",
 					"scene": null
 				}
 			]
