商品详情页布局

--- a/app.json
+++ b/app.json
@@ -4,7 +4,8 @@
     "pages/category/index",
     "pages/cart/index",
     "pages/personal/index",
-    "pages/search_list/index"
+    "pages/search_list/index",
+    "pages/goods_details/index"
   ],
   "window": {
     "backgroundTextStyle": "dark",
