--- a/project.config.json
+++ b/project.config.json
@@ -40,7 +40,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 2,
 			"list": [
 				{
 					"id": -1,
@@ -54,6 +54,13 @@
 					"name": "pages/search_list/index",
 					"pathName": "pages/search_list/index",
 					"query": "keyword=曲面电视",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/goods_details/index",
+					"pathName": "pages/goods_details/index",
+					"query": "",
 					"scene": null
 				}
 			]
